kubernetes/darkstar/apps/observability/dockhand/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dockhand-apollo
spec:
  hostnames:
    - dh-apollo.starstreak.net
  parentRefs:
    - name: envoy-internal
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: dockhand-apollo
      matches:
        - path:
            type: PathPrefix
            value: /
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dockhand-gravity
spec:
  hostnames:
    - dh-gravity.starstreak.net
  parentRefs:
    - name: envoy-internal
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: dockhand-gravity
      matches:
        - path:
            type: PathPrefix
            value: /
